# QTChat

./: .gitignore  CMakeLists.txt  ConnectionHandler.cpp  ConnectionHandler.h  README.md  Rawsocket.cpp  Rawsocket.h  activeconnection.cpp  activeconnection.h  ca-cert.pem  chain.pem  cwizsslsocket.cpp  cwizsslsocket.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  server-cert.pem  server-key.pem
